--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,12 @@
     <string name="action_delete">Delete</string>
     <string name="create_section">Create section</string>
     <string name="section_s">Section \"%s\"</string>
+    <string name="no_workspace_items">No workspace items defined.</string>
+    <string name="none">(None)</string>
+    <string name="t_just_now">just now</string>
+    <string name="t_sec_ago">%d sec ago</string>
+    <string name="t_min_ago">%d min ago</string>
+    <string name="t_hours_ago">%d hours ago</string>
+    <string name="t_days_ago">%d days ago</string>
+    <string name="section_title">Title (use \"%s\" to insert topic data)</string>
 </resources>
